<?xml version="1.0"?>
<package format="2">
  <name>finder_camera</name>
  <version>2.3.2</version>
  <description>Camera package allowing access to ZT Pilot Finder 100i Tracking module</description>
  <maintainer email="guoruonan@ztpilot.com">Steve Guo</maintainer>
  <license>Apache 2.0</license>
  
  <url type="website">http://www.ztpilot.com/wiki/f100</url>
  <url type="bugtracker">https://github.com/ztpilot/finder_ros/issues</url>

  <author email="guoruonan@ztpilot.com">Steve Guo</author>  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>eigen</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>nav_msgs</depend>
  <depend>nodelet</depend>  
  <depend>genmsg</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>message_runtime</depend>
  <depend>tf</depend>
  <depend>ddynamic_reconfigure</depend>
  <depend>diagnostic_updater</depend>
  <depend>librealsense2</depend>
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
