<?xml version="1.0"?>
<package format="2">
  <name>finder_description</name>
  <version>1.1.0</version>
  <description>Finder Camera description package for F100 cameras</description>
  <maintainer email="guoruonan@ztpilot.com">Steve Guo</maintainer>
  <license>Apache 2.0</license>

  <url type="website">http://www.ztpilot.com/wiki/f100</url>
  <url type="bugtracker">https://github.com/ztpilot/finder_ros/issues</url>
  
  <author email="guoruonan@ztpilot.com">Steve Guo</author>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>xacro</exec_depend>
  <test_depend>rosunit</test_depend>
</package>
